--- a/index.html
+++ b/index.html
@@ -266,6 +266,7 @@
   </template>
 
 <script src="js/util.js"></script>
+<script src="js/form.js"></script>
 <script src="js/map.js"></script>
 </body>
 </html>
