--- a/index.html
+++ b/index.html
@@ -268,7 +268,8 @@
 <script src="js/util.js"></script>
 <script src="js/backend.js"></script>
 <script src="js/data.js"></script>
+<script src="js/rendering.js"></script>
+<script src="js/pin.js"></script>
 <script src="js/form.js"></script>
-<script src="js/map.js"></script>
 </body>
 </html>
