--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
 
 <script src="js/util.js"></script>
 <script src="js/backend.js"></script>
-<script src="js/rendering.js"></script>
+<script src="js/map.js"></script>
 <script src="js/form.js"></script>
 <script src="js/pin.js"></script>
 </body>
